# RT-raytrace

./: CMakeLists.txt  classes.cpp  classes.h  finder.h  game_options.cpp  game_options.h  game_start.exe.txt  game_tester.cbp  game_tester.depend  game_tester.layout  game_tester.txt  gameplay.cpp  gameplay.h  global_header.h  main.c сохранение.txt  main.c старое сохранение 60 фпс.txt  main.cpp  menu.h  mysor.h  prints.cpp  prints.h  readme.txt  screen_func.cpp  screen_func.h  structs.cpp  structs.h  syst_opt.cpp  syst_opt.h  vectors.cpp  vectors.h  vectors.txt  vizor.txt
Game_Objects/: Objects_adress.txt  box1.txt  box2.txt  box3.txt  box4.txt  box5.txt  box6.txt  floor.txt  floor1.txt  hame.txt  obj1.txt  test_1.txt  triangle.txt  triangle2.txt
Menu/: button_0_24.tif
